--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "express-sslify": "^1.2.0",
     "sass-loader": "^10.0.2",
     "sass-node": "^4.11.2",
+    "serve-static": "^1.14.1",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
